--- a/package.json
+++ b/package.json
@@ -1,4 +1,20 @@
 {
   "name": "samsara",
-  "packageManager": "yarn@4.2.2"
+  "packageManager": "yarn@4.2.2",
+  "type": "module",
+  "dependencies": {
+    "@prisma/client": "5.15.1",
+    "kol.js": "^0.1.1"
+  },
+  "scripts": {
+    "test": "vitest"
+  },
+  "devDependencies": {
+    "@types/node": "^20.14.8",
+    "prettier": "^3.3.2",
+    "prisma": "^5.15.1",
+    "tsx": "^4.15.7",
+    "typescript": "^5.5.2",
+    "vitest": "^1.6.0"
+  }
 }
