--- a/package.json
+++ b/package.json
@@ -1,20 +1,51 @@
 {
-  "name": "samsara",
-  "packageManager": "yarn@4.2.2",
+  "private": true,
+  "sideEffects": false,
   "type": "module",
-  "dependencies": {
-    "@prisma/client": "5.15.1",
-    "kol.js": "^0.1.1"
-  },
   "scripts": {
-    "test": "vitest"
+    "build": "remix vite:build",
+    "dev": "remix vite:dev",
+    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "start": "remix-serve ./build/server/index.js",
+    "typecheck": "tsc",
+    "test": "vitest",
+    "format": "prettier --write .; prisma format",
+    "rescan": "node --import tsx --env-file .env scripts/rescan.ts",
+    "recent": "node --import tsx --env-file .env scripts/recent.ts"
+  },
+  "dependencies": {
+    "@remix-run/node": "^2.10.0",
+    "@remix-run/react": "^2.10.0",
+    "@remix-run/serve": "^2.10.0",
+    "isbot": "^5.1.10",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/node": "^20.14.8",
+    "@prisma/client": "5.16.0",
+    "@remix-run/dev": "^2.10.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.14.1",
+    "@typescript-eslint/parser": "^7.14.1",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "kol.js": "^0.1.4",
     "prettier": "^3.3.2",
-    "prisma": "^5.15.1",
+    "prisma": "^5.16.0",
     "tsx": "^4.15.7",
     "typescript": "^5.5.2",
+    "vite": "^5.3.1",
+    "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.0"
-  }
+  },
+  "engines": {
+    "node": ">=20.0.0"
+  },
+  "packageManager": "yarn@4.3.1"
 }
