--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "isbot": "^5.1.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^2.12.7",
     "remix-utils": "^7.6.0"
   },
   "devDependencies": {
