--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "isbot": "^5.1.10",
     "react": "19.0.0-rc-58af67a8f8-20240628",
     "react-dom": "19.0.0-rc-58af67a8f8-20240628",
-    "recharts": "^2.12.7",
+    "react-is": "19.0.0-rc-58af67a8f8-20240628",
+    "recharts": "^2.13.0-alpha.4",
     "remix-utils": "^7.6.0"
   },
   "devDependencies": {
@@ -53,6 +54,9 @@
     "vite": "^5.3.1",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.0"
+  },
+  "resolutions": {
+    "react-is": "19.0.0-rc-58af67a8f8-20240628"
   },
   "engines": {
     "node": ">=20.0.0"
