--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@remix-run/react": "^2.10.1",
     "@remix-run/serve": "^2.10.1",
     "@remix-run/web-fetch": "^4.4.2",
+    "@tanstack/react-table": "^8.19.2",
     "create-color": "^2.0.6",
     "framer-motion": "^11.2.12",
     "isbot": "^5.1.11",
