--- a/package.json
+++ b/package.json
@@ -16,52 +16,53 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.4",
+    "@emotion/react": "^11.13.3",
     "@emotion/server": "^11.11.0",
-    "@emotion/styled": "^11.11.5",
-    "@remix-run/node": "^2.10.2",
-    "@remix-run/react": "^2.10.2",
-    "@remix-run/serve": "^2.10.2",
+    "@emotion/styled": "^11.13.0",
+    "@remix-run/node": "^2.11.2",
+    "@remix-run/react": "^2.11.2",
+    "@remix-run/serve": "^2.11.2",
     "@remix-run/web-fetch": "^4.4.2",
-    "@tanstack/react-table": "^8.19.2",
+    "@tanstack/react-table": "^8.20.5",
     "create-color": "^2.0.6",
-    "framer-motion": "^11.2.13",
-    "isbot": "^5.1.11",
-    "react": "19.0.0-rc-58af67a8f8-20240628",
-    "react-dom": "19.0.0-rc-58af67a8f8-20240628",
-    "react-is": "19.0.0-rc-58af67a8f8-20240628",
+    "framer-motion": "^11.5.3",
+    "isbot": "^5.1.17",
+    "react": "19.0.0-rc-d1afcb43-20240903",
+    "react-dom": "19.0.0-rc-d1afcb43-20240903",
+    "react-is": "19.0.0-rc-d1afcb43-20240903",
     "recharts": "^2.13.0-alpha.4",
     "remix-utils": "^7.6.0"
   },
   "devDependencies": {
     "@graphql-typed-document-node/core": "^3.2.0",
-    "@prisma/client": "5.16.1",
-    "@remix-run/dev": "^2.10.2",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@prisma/client": "5.19.1",
+    "@remix-run/dev": "^2.11.2",
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.20",
     "commander": "^12.1.0",
     "eslint": "^8.57.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-react": "^7.34.3",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
+    "eslint-plugin-react": "^7.35.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.0",
     "kol.js": "^0.1.4",
-    "prettier": "^3.3.2",
-    "prisma": "^5.16.1",
-    "tsx": "^4.16.2",
-    "typescript": "^5.5.3",
-    "vite": "^5.3.3",
-    "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^1.6.0"
+    "prettier": "^3.3.3",
+    "prisma": "^5.19.1",
+    "tsx": "^4.19.0",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.3",
+    "vite-tsconfig-paths": "^5.0.1",
+    "vitest": "^2.0.5"
   },
-  "resolutions": {
-    "react-is": "19.0.0-rc-58af67a8f8-20240628"
+  "overrides": {
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc"
   },
   "engines": {
     "node": ">=20.0.0"
