--- a/package.json
+++ b/package.json
@@ -60,9 +60,10 @@
     "vite-tsconfig-paths": "^5.0.1",
     "vitest": "^2.0.5"
   },
-  "overrides": {
+  "resolutions": {
     "@types/react": "npm:types-react@rc",
-    "@types/react-dom": "npm:types-react-dom@rc"
+    "@types/react-dom": "npm:types-react-dom@rc",
+    "react-is": "19.0.0-rc-d1afcb43-20240903"
   },
   "engines": {
     "node": ">=20.0.0"
