Upgrade to eslint 9

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "remix vite:build",
     "dev": "remix vite:dev",
-    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc",
     "test": "vitest",
@@ -16,6 +16,7 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/system": "^2.6.2",
     "@emotion/react": "^11.13.3",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.13.0",
@@ -34,21 +35,17 @@
     "remix-utils": "^7.6.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.10.0",
     "@graphql-typed-document-node/core": "^3.2.0",
     "@prisma/client": "5.19.1",
     "@remix-run/dev": "^2.11.2",
+    "@types/eslint__js": "^8.42.3",
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
     "autoprefixer": "^10.4.20",
     "commander": "^12.1.0",
-    "eslint": "^8.57.0",
-    "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-import": "^2.30.0",
-    "eslint-plugin-jsx-a11y": "^6.10.0",
+    "eslint": "^9.10.0",
     "eslint-plugin-react": "^7.35.2",
-    "eslint-plugin-react-hooks": "^4.6.2",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.0",
     "kol.js": "^0.1.4",
@@ -56,6 +53,7 @@
     "prisma": "^5.19.1",
     "tsx": "^4.19.0",
     "typescript": "^5.5.4",
+    "typescript-eslint": "^8.4.0",
     "vite": "^5.4.3",
     "vite-tsconfig-paths": "^5.0.1",
     "vitest": "^2.0.5"
