--- a/package.json
+++ b/package.json
@@ -45,24 +45,25 @@
     "autoprefixer": "^10.4.20",
     "commander": "^12.1.0",
     "eslint": "^9.10.0",
-    "eslint-plugin-react": "^7.35.2",
+    "eslint-plugin-react": "^7.36.1",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.0",
-    "kol.js": "^0.1.4",
+    "kol.js": "^0.1.5",
     "prettier": "^3.3.3",
     "prisma": "^5.19.1",
-    "tsx": "^4.19.0",
+    "tsx": "^4.19.1",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.5.0",
-    "vite": "^5.4.4",
+    "vite": "^5.4.5",
     "vite-tsconfig-paths": "^5.0.1",
-    "vitest": "^2.0.5"
+    "vitest": "^2.1.0"
   },
   "resolutions": {
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
     "react-is": "19.0.0-rc-d1afcb43-20240903",
-    "@emotion/utils": "1.4.0"
+    "@emotion/utils": "1.4.0",
+    "uri-js": "npm:uri-js-replace@1.0.1"
   },
   "engines": {
     "node": ">=20.0.0"
