--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "lib": ["DOM", "DOM.Iterable", "ES2022"],
     "types": ["@remix-run/node", "vite/client"],
     "isolatedModules": true,
+    "experimentalDecorators": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
     "module": "ESNext",
