--- a/package.json
+++ b/package.json
@@ -14,49 +14,49 @@
     "recent": "node --import tsx --env-file .env scripts/recent.ts"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.1.1",
-    "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/react": "^2.10.3",
     "@chakra-ui/system": "^2.6.2",
     "@emotion/react": "^11.13.3",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.13.0",
-    "@remix-run/node": "^2.12.1",
-    "@remix-run/react": "^2.12.1",
-    "@remix-run/serve": "^2.12.1",
+    "@remix-run/node": "^2.13.1",
+    "@remix-run/react": "^2.13.1",
+    "@remix-run/serve": "^2.13.1",
     "@remix-run/web-fetch": "^4.4.2",
     "@tanstack/react-table": "^8.20.5",
     "create-color": "^2.0.6",
-    "framer-motion": "^11.5.6",
+    "framer-motion": "^11.11.9",
     "isbot": "^5.1.17",
     "react": "19.0.0-rc-d1afcb43-20240903",
     "react-dom": "19.0.0-rc-d1afcb43-20240903",
     "react-is": "19.0.0-rc-d1afcb43-20240903",
-    "recharts": "^2.13.0-alpha.5",
+    "recharts": "^2.13.0",
     "remix-utils": "^7.7.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.11.1",
+    "@eslint/js": "^9.12.0",
     "@graphql-typed-document-node/core": "^3.2.0",
-    "@prisma/client": "5.19.1",
-    "@remix-run/dev": "^2.12.1",
+    "@prisma/client": "5.21.1",
+    "@remix-run/dev": "^2.13.1",
     "@types/eslint__js": "^8.42.3",
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
     "autoprefixer": "^10.4.20",
     "commander": "^12.1.0",
-    "eslint": "^9.11.1",
-    "eslint-plugin-react": "^7.36.1",
+    "eslint": "^9.12.0",
+    "eslint-plugin-react": "^7.37.1",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.0",
     "kol.js": "^0.1.6",
     "prettier": "^3.3.3",
-    "prisma": "^5.19.1",
+    "prisma": "^5.21.1",
     "tsx": "^4.19.1",
-    "typescript": "^5.6.2",
-    "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.7",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.10.0",
+    "vite": "^5.4.9",
     "vite-tsconfig-paths": "^5.0.1",
-    "vitest": "^2.1.1"
+    "vitest": "^2.1.3"
   },
   "resolutions": {
     "@types/react": "npm:types-react@rc",
@@ -66,7 +66,7 @@
     "uri-js": "npm:uri-js-replace@1.0.1"
   },
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=21.0.0"
   },
   "packageManager": "yarn@4.3.1"
 }
