--- a/package.json
+++ b/package.json
@@ -14,49 +14,46 @@
     "recent": "node --import tsx --env-file .env scripts/recent.ts"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.2.5",
-    "@chakra-ui/react": "^2.10.4",
-    "@chakra-ui/system": "^2.6.2",
-    "@emotion/react": "^11.13.3",
+    "@chakra-ui/react": "^3.2.3",
+    "@emotion/react": "^11.14.0",
     "@emotion/server": "^11.11.0",
-    "@emotion/styled": "^11.13.0",
-    "@remix-run/node": "^2.14.0",
-    "@remix-run/react": "^2.14.0",
-    "@remix-run/serve": "^2.14.0",
+    "@remix-run/node": "^2.15.1",
+    "@remix-run/react": "^2.15.1",
+    "@remix-run/serve": "^2.15.1",
     "@remix-run/web-fetch": "^4.4.2",
     "@tanstack/react-table": "^8.20.5",
     "create-color": "^2.0.6",
-    "framer-motion": "^11.11.11",
     "isbot": "^5.1.17",
-    "react": "19.0.0-rc-d1afcb43-20240903",
-    "react-dom": "19.0.0-rc-d1afcb43-20240903",
-    "react-is": "19.0.0-rc-d1afcb43-20240903",
-    "recharts": "^2.13.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-icons": "^5.4.0",
+    "react-is": "19.0.0",
+    "recharts": "^2.14.1",
     "remix-utils": "^7.7.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.14.0",
+    "@eslint/js": "^9.16.0",
     "@graphql-typed-document-node/core": "^3.2.0",
-    "@prisma/client": "5.22.0",
-    "@remix-run/dev": "^2.14.0",
+    "@prisma/client": "6.0.1",
+    "@remix-run/dev": "^2.15.1",
     "@types/eslint__js": "^8.42.3",
-    "@types/react": "npm:types-react@rc",
-    "@types/react-dom": "npm:types-react-dom@rc",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.2",
     "autoprefixer": "^10.4.20",
     "commander": "^12.1.0",
-    "eslint": "^9.14.0",
+    "eslint": "^9.16.0",
     "eslint-plugin-react": "^7.37.2",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.2",
-    "kol.js": "^0.1.6",
-    "prettier": "^3.3.3",
-    "prisma": "^5.22.0",
+    "kol.js": "^0.1.7",
+    "prettier": "^3.4.2",
+    "prisma": "^6.0.1",
     "tsx": "^4.19.2",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.13.0",
-    "vite": "^5.4.11",
-    "vite-tsconfig-paths": "^5.1.2",
-    "vitest": "^2.1.4"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.18.0",
+    "vite": "^6.0.3",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^2.1.8"
   },
   "resolutions": {
     "@types/react": "npm:types-react@rc",
