--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "react-dom": "19.0.0",
     "react-icons": "^5.4.0",
     "react-is": "19.0.0",
-    "recharts": "^2.15.0",
-    "remix-utils": "^7.7.0"
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
