--- a/package.json
+++ b/package.json
@@ -3,24 +3,21 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix vite:build",
-    "dev": "remix vite:dev",
-    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "remix-serve ./build/server/index.js",
-    "typecheck": "tsc --noEmit",
-    "test": "vitest",
+    "build": "react-router build",
+    "dev": "react-router dev",
     "format": "prettier --write .; prisma format",
+    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
+    "recent": "node --import tsx --env-file .env scripts/recent.ts",
     "rescan": "node --import tsx --env-file .env scripts/rescan.ts",
-    "recent": "node --import tsx --env-file .env scripts/recent.ts"
+    "start": "react-router-serve ./build/server/index.js",
+    "test": "vitest",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@chakra-ui/react": "^3.4.0",
     "@emotion/react": "^11.14.0",
     "@emotion/server": "^11.11.0",
-    "@remix-run/node": "^2.15.2",
-    "@remix-run/react": "^2.15.2",
-    "@remix-run/serve": "^2.15.2",
-    "@remix-run/web-fetch": "^4.4.2",
+    "@react-router/fs-routes": "^7.1.3",
     "@tanstack/react-table": "^8.20.6",
     "create-color": "^2.0.6",
     "isbot": "^5.1.21",
@@ -28,14 +25,18 @@
     "react-dom": "19.0.0",
     "react-icons": "^5.4.0",
     "react-is": "19.0.0",
+    "react-router": "^7.1.3",
     "recharts": "^2.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
     "@graphql-typed-document-node/core": "^3.2.0",
     "@prisma/client": "6.2.1",
-    "@remix-run/dev": "^2.15.2",
+    "@react-router/dev": "^7.1.3",
+    "@react-router/serve": "^7.1.3",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.1",
     "@types/eslint__js": "^8.42.3",
+    "@types/node": "^22.10.9",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "autoprefixer": "^10.4.20",
