--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-router/fs-routes": "^7.2.0",
     "@tanstack/react-table": "^8.21.2",
     "create-color": "^2.0.6",
+    "feed": "^4.2.2",
     "isbot": "^5.1.23",
     "next-themes": "^0.4.4",
     "react": "19.0.0",
