--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "recent": "node --import tsx --env-file .env scripts/recent.ts",
     "rescan": "node --import tsx --env-file .env scripts/rescan.ts",
+    "retag": "node --import tsx --env-file .env scripts/retag.ts",
+    "leaderboards": "node --import tsx --env-file .env scripts/leaderboards.ts",
     "start": "react-router-serve ./build/server/index.js",
     "test": "vitest",
     "typecheck": "tsc --noEmit"
@@ -47,7 +49,7 @@
     "eslint-plugin-react": "^7.37.5",
     "graphql": "^16.11.0",
     "graphql-request": "^7.1.2",
-    "kol.js": "^0.1.8",
+    "kol.js": "^0.2.0",
     "prettier": "^3.5.3",
     "prisma": "^6.6.0",
     "tsx": "^4.19.4",
