--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "dev": "react-router dev",
     "format": "prettier --write .; prisma format",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
-    "recent": "node --import tsx --env-file .env scripts/recent.ts",
-    "rescan": "node --import tsx --env-file .env scripts/rescan.ts",
-    "retag": "node --import tsx --env-file .env scripts/retag.ts",
-    "leaderboards": "node --import tsx --env-file .env scripts/leaderboards.ts",
+    "recent": "node --import tsx --env-file-if-exists .env scripts/recent.ts",
+    "rescan": "node --import tsx --env-file-if-exists .env scripts/rescan.ts",
+    "retag": "node --import tsx --env-file-if-exists .env scripts/retag.ts",
+    "leaderboards": "node --import tsx --env-file-if-exists .env scripts/leaderboards.ts",
     "start": "react-router-serve ./build/server/index.js",
     "test": "vitest",
     "typecheck": "tsc --noEmit"
