--- a/package.json
+++ b/package.json
@@ -19,45 +19,43 @@
     "@chakra-ui/react": "^3.30.0",
     "@emotion/react": "^11.14.0",
     "@emotion/server": "^11.11.0",
-    "@react-router/fs-routes": "^7.10.1",
+    "@react-router/fs-routes": "^7.11.0",
     "@tanstack/react-table": "^8.21.3",
     "create-color": "^2.0.6",
+    "data-of-loathing": "^2.6.2",
     "feed": "^5.1.0",
     "isbot": "^5.1.32",
     "next-themes": "^0.4.6",
-    "react": "19.2.1",
+    "react": "19.2.3",
     "react-dom": "19.2.1",
     "react-icons": "^5.5.0",
-    "react-is": "19.2.1",
-    "react-router": "^7.10.1",
-    "recharts": "^3.5.1"
+    "react-is": "19.2.3",
+    "react-router": "^7.11.0",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@graphql-typed-document-node/core": "^3.2.0",
-    "@prisma/client": "6.19.0",
-    "@react-router/dev": "^7.10.1",
-    "@react-router/serve": "^7.10.1",
-    "@trivago/prettier-plugin-sort-imports": "^6.0.0",
+    "@eslint/js": "^9.39.2",
+    "@prisma/client": "6.19.1",
+    "@react-router/dev": "^7.11.0",
+    "@react-router/serve": "^7.11.0",
+    "@trivago/prettier-plugin-sort-imports": "^6.0.1",
     "@types/eslint__js": "^9.14.0",
-    "@types/node": "^24.10.2",
+    "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
-    "autoprefixer": "^10.4.22",
+    "autoprefixer": "^10.4.23",
     "commander": "^14.0.2",
-    "eslint": "^9.39.1",
+    "eslint": "^9.39.2",
     "eslint-plugin-react": "^7.37.5",
-    "graphql": "^16.12.0",
-    "graphql-request": "^7.3.5",
     "kol.js": "^0.2.0",
     "prettier": "^3.7.4",
-    "prisma": "^6.19.0",
+    "prisma": "^6.19.1",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.49.0",
-    "vite": "^7.2.7",
-    "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^4.0.15"
+    "typescript-eslint": "^8.51.0",
+    "vite": "^7.3.0",
+    "vite-tsconfig-paths": "^6.0.3",
+    "vitest": "^4.0.16"
   },
   "resolutions": {
     "@types/react": "npm:types-react@rc",
